修改了pdfActivityView的几个Warning 修改HtmlActivityView。仍有待测试。